# TinyCog

./: CMakeLists.txt  InstallDeps.sh  README.md  basic.cpp  cmd_einstein.scm  dr-roboto.scm  emo_demo.scm  func_times  run.sh  start-relex.sh
act/: cmd_einstein.scm
act/audio/: FestivalTTS.cpp
act/manual/: ManualCommands.cpp  manualCommands.cpp
behavior/: behavior.scm  demo.top  dr_roboto.scm  events.scm  functions.scm  interaction-rules.scm  test.scm  test.top  updater.scm
behavior/scratch/: scratch.scm
behavior/socket/: socket.scm
cmake/: FindEST.cmake  FindFestival.cmake  FindGuile.cmake  FindPocketSphinx.cmake  FindTinyCog.cmake  FindWiringPi.cmake  TinyCogConfig.cmake
comm/rpc/: CMakeLists.txt  RPC_Client.cpp  RPC_Client_Face_Basic.cpp  RPC_Client_Face_Emotion.cpp  RPC_Client_Image_Basic.cpp  RPC_Server.cpp
comm/spi/: SpiComm.cpp
dr-roboto/: dr-roboto.cc  dr-roboto.cpp  dr-roboto.cpp.in  emo_demo.cpp.in
examples/: TestDrRoboto.scm
examples/act/audio/: exampleTTS.cpp
examples/act/manual/: ManualCommandsExample.cpp  exampleManualCommands.cpp
examples/comm/rpc/: RPC_Client_Face_Emotion_Test.cpp  RPC_Client_Image_Basic_Test.cpp  RPC_Client_Test.cpp  RPC_Server_Image_Basic_Test.cpp  RPC_Server_Test.cpp
examples/comm/spi/: SPICommTest.cpp
examples/network/: exUDPserver.cpp
examples/sense/audio/: AudioCapExample.cpp  STT_Test.cpp
examples/sense/vision/: AllTest.cpp  FaceLandMarkTest.cpp  FaceNoddingDetection.cpp  FileTestFace.cpp  FingersCountTest.cpp  RaspiFaceLandMarkTest.cpp  RaspiFingersCountTest.cpp  RaspiSaliencyTest.cpp  RaspiVisionTest.cpp  RaspiVisionTestFace.cpp  SaliencyTest.cpp  SaliencyTest2.cpp  StateofEyesDetection.cpp  VisionTest.cpp  VisionTestFace.cpp
ghost/: character1.ghost  character_1.ghost  concepts.ghost  concepts_1.ghost  intro1.ghost
include/act/audio/: FestivalTTS.hpp  TTS.hpp
include/act/manual/: ManualCommands.hpp
include/comm/rpc/: RPC_Client.hpp  RPC_Client.hpp.in  RPC_Client_Face_Basic.hpp.in  RPC_Client_Face_Emotion.hpp  RPC_Client_Face_Emotion.hpp.in  RPC_Client_Image_Basic.hpp  RPC_Client_Image_Basic.hpp.in  RPC_Server.hpp  RPC_Server_Face_Basic.hpp  RPC_Server_Image_Basic.hpp
include/comm/spi/: SpiComm.hpp
include/network/: StringServerUDP.hpp
include/robot/roboto/: RobotoProtocol.hpp
include/sense/audio/: AudioCap.hpp  SSTT.hpp  STT.hpp
include/sense/vision/: BoxTracker.hpp  BoxTrackerThread.hpp  CamCapture.hpp  DSaliency.hpp  FaceKnow.hpp  FacialExpressions.hpp  FacialLandMark.hpp  FileCapture.hpp  FingersCount.hpp  ITColor2Gray.hpp  ITDetectFace.hpp  ITDetectHand.hpp  ITDetectSmile.hpp  ITEqualizeHist.hpp  ImageSource.hpp  ImageTransform.hpp  RaspiCamCapture.hpp  RaspiVision.hpp  Vision.hpp  VisionCommon.hpp
include/util/: SCMWrapper.hpp  util.hpp
network/: StringServerUDP.cpp
protos/: .img_base.proto.swp  EmotionService.proto  img_base.proto
scratch/: scratchExtension.json
sense/audio/: AudioCap.cpp  SSTT.cpp  SSTT.cpp.in  STT.cpp  STT.cpp.in
sense/vision/capture/: CamCapture.cpp  FileCapture.cpp  ITColor2Gray.cpp  ITEqualizeHist.cpp  RaspiCamCapture.cpp
sense/vision/detect/: DSaliency.cpp  FacialExpressions.cpp  FacialLandMark.cpp  FingersCount.cpp  ITDetectFace.cpp  ITDetectHand.cpp  ITDetectSmile.cpp
sense/vision/track/: BoxTracker.cpp  BoxTrackerThread.cpp
socket/: socket.scm
usage/: README.md
util/: SCMWrapper.cpp  util.cpp
util/guile-json/: LICENSE
